Bruh i really didn't know how to get this shit working om mobile wow

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </p>
       </footer>
     </main>
-    <script async src="gainzcomputer.js" ></script>
+    <script src="gainzcomputer.js" ></script>
     <script data-goatcounter="https://rocket-diamonds.goatcounter.com/count"
             async src="//gc.zgo.at/count.js"></script>
   </body>
