Sick animations bro

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
             <button id="calculate">CALCULATE</button>
           </div>
           <div class="results" >
-            <p><span class="wiggle">🚀</span> WHEN GME HITS 1000 <span class="wiggle">🚀</span></p>
+            <p>🚀 WHEN GME HITS 1000 🚀</p>
             <p>YOU WILL RIP</p>
-              <p class="wealth">
+              <p class="wealth wiggle">
                 <span id="wealth">0</span>
                 DOLLARS
               </p>
@@ -45,7 +45,7 @@
           <h3>💎  🖐🏻  💎 🖐🏿 💎 🖐🏽  💎  🖐🏼 💎 🖐🏻 💎 🖐🏿 💎 🖐🏻 💎 🖐🏽 💎 🖐🏼 💎 🖐🏿 💎 🖐🏻 💎 🖐🏿 💎 </h3>
       </div>
       <footer>
-        <p>
+        <p >
           This shitty website was built in about 20 minutes by <a href="https://www.calebjay.com">Caleb Jay Rogers</a>, software engineer.
         </p>
         <p>
